Imported GNU Classpath 0.19 + gcj-import-20051115.
       * sources.am: Regenerated.
       * Makefile.in: Likewise.
       * scripts/makemake.tcl: Use glob -nocomplain.

From-SVN: r107049